# xbmc

./: .gh.yml  .gitignore  .gitmodules.text  codegenerator.mk  configure.in
XBMC-ATV2.xcodeproj/: project.pbxproj
XBMC-IOS.xcodeproj/: project.pbxproj
XBMC.xcodeproj/: project.pbxproj
docs/: README.android
language/English/: strings.po
lib/: DllVorbisfile.h
lib/UnrarXLib/: os.hpp  raros.hpp  suballoc.hpp
lib/libRTV/: rtv.h
lib/libUPnP/: Makefile.in
lib/libXDAAP/: thread.h
lib/libhts/: htsstr.c  net_posix.c
project/VS2010Express/: XBMC.vcxproj  XBMC.vcxproj.filters
project/Win32BuildSetup/: BuildSetup.bat  buildpvraddons.bat
tools/android/depends/: .gitignore  Makefile.in  Makefile.include.in  Toolchain.cmake.in  configure.in
tools/android/depends/alsa-lib/: Makefile
tools/android/depends/bzip2/: Makefile
tools/android/depends/cmake-native/: Makefile
tools/android/depends/curl/: Makefile
tools/android/depends/dbus/: Makefile
tools/android/depends/fontconfig/: Makefile
tools/android/depends/freetype2/: Makefile
tools/android/depends/fribidi/: Makefile
tools/android/depends/gas-preprocessor-native/: Makefile
tools/android/depends/jasper/: Makefile
tools/depends/: Makefile.in  Makefile.include.in  README  Toolchain.cmake.in  bootstrap  config.site.in  config.site.native.in  configure.in
tools/depends/afpfs-ng/: Makefile
tools/depends/android-sys/: Makefile
tools/depends/autoconf-native/: Makefile
tools/depends/autoconf-pre-depends/: Makefile
tools/depends/automake-native/: Makefile
tools/depends/boost/: Makefile
tools/depends/expat/: Makefile
tools/depends/gettext/: Makefile
tools/depends/gettext-native/: Makefile
tools/depends/help2man-native/: Makefile
tools/depends/libcdio/: Makefile
tools/depends/libflac/: Makefile
tools/depends/libgcrypt/: 03-armasm.patch  Makefile
tools/depends/libgpg-error/: Makefile
tools/depends/libiconv/: Makefile
tools/depends/libjpeg-turbo-native/: Makefile
tools/depends/liblzo2/: Makefile
tools/depends/libmad/: Makefile
tools/depends/libmodplug/: Makefile
tools/depends/libmpeg2/: Makefile
tools/depends/libnfs/: Makefile
tools/depends/libomxil-bellagio/: Makefile
tools/depends/libplist/: 0002-missing-libs.patch  Makefile
tools/depends/libpng/: Makefile
tools/depends/libpng-native/: Makefile
tools/depends/librtmp/: Makefile
tools/depends/libsamplerate/: Makefile
tools/depends/libsdl_image-native/: Makefile
tools/depends/libssh2/: Makefile
tools/depends/libusb/: Makefile
tools/depends/libzip/: Makefile
tools/depends/m4-native/: Makefile
tools/depends/m4-pre-depends/: Makefile
tools/depends/mysql/: Makefile
tools/depends/ncurses/: Makefile
tools/depends/openssl/: Makefile
tools/depends/pcre/: Makefile
tools/depends/pkg-config-native/: Makefile
tools/depends/python26/: modules.setup
tools/depends/python26-native/: Makefile
tools/depends/readline/: Makefile
tools/depends/rpl-native/: Makefile
tools/depends/sqlite3/: Makefile
tools/depends/swig-native/: Makefile
tools/depends/taglib/: Makefile
tools/depends/tiff/: Makefile
tools/depends/xbmc/: Makefile
tools/depends/xbmc-pvr-addons/: Makefile
tools/depends/yasm-native/: Makefile
xbmc/: Application.cpp  Application.h  ApplicationMessenger.cpp  GUIInfoManager.cpp  Util.cpp  system.h
xbmc/addons/: Addon.cpp  AddonDll.h
xbmc/cores/AudioEngine/: AEFactory.cpp
xbmc/cores/DllLoader/: DllLoaderContainer.cpp  ldt_keeper.c
xbmc/cores/ExternalPlayer/: ExternalPlayer.cpp
xbmc/cores/VideoRenderers/: LinuxRendererGLES.cpp
xbmc/cores/dvdplayer/: DVDPlayer.cpp  DVDPlayerSubtitle.cpp
xbmc/cores/omxplayer/: OMXPlayer.cpp
xbmc/cores/playercorefactory/: PlayerCoreFactory.h
xbmc/dbwrappers/: mysqldataset.cpp  sqlitedataset.cpp
xbmc/filesystem/: CurlFile.cpp  DirectoryFactory.cpp  FileFactory.cpp  Makefile.in  SAPDirectory.cpp  SMBDirectory.cpp  UPnPDirectory.cpp
xbmc/guilib/: GUIEditControl.cpp  GUIWindow.cpp  GraphicContext.cpp  JpegIO.cpp  JpegIO.h  Makefile.in  Texture.cpp  Texture.h  cximage.cpp  cximage.h  freeimage.cpp  freeimage.h  iimage.h  imagefactory.cpp  imagefactory.h
xbmc/input/: InertialScrollingHandler.cpp  InertialScrollingHandler.h  SDLJoystick.cpp
xbmc/interfaces/: Builtins.cpp
xbmc/interfaces/json-rpc/: AudioLibrary.cpp
xbmc/interfaces/legacy/: Dialog.cpp  ModuleXbmc.cpp  WindowXML.cpp
xbmc/interfaces/python/: XBPython.cpp
xbmc/linux/: LinuxTimezone.cpp  PosixMountProvider.cpp  XLCDproc.cpp  XMemUtils.cpp  XTimeUtils.cpp
xbmc/music/: MusicDatabase.cpp  MusicInfoLoader.cpp
xbmc/music/dialogs/: GUIDialogSongInfo.cpp
xbmc/music/infoscanner/: MusicInfoScanner.cpp
xbmc/music/tags/: MusicInfoTag.h
xbmc/music/windows/: GUIWindowMusicBase.cpp  GUIWindowMusicBase.h  GUIWindowMusicNav.cpp
xbmc/network/: EventServer.cpp  Makefile.in  Network.h  NetworkServices.cpp  UPnP.cpp  WakeOnAccess.cpp  WakeOnAccess.h  Zeroconf.cpp  Zeroconf.h  ZeroconfBrowser.cpp
xbmc/network/linux/: NetworkLinux.cpp  NetworkLinux.h
xbmc/network/osx/: ioshacks.h
xbmc/network/upnp/: UPnPServer.cpp
xbmc/network/windows/: NetworkWin32.cpp  NetworkWin32.h  ZeroconfBrowserWIN.cpp  ZeroconfBrowserWIN.h  ZeroconfWIN.cpp  ZeroconfWIN.h
xbmc/osx/: DarwinUtils.h  DarwinUtils.mm  HotKeyController.m  XBMCHelper.cpp
xbmc/osx/ios/: XBMCController.mm
xbmc/pictures/: GUIWindowPictures.cpp  Picture.cpp
xbmc/powermanagement/: DPMSSupport.cpp  PowerManager.cpp
xbmc/settings/: AdvancedSettings.cpp  AdvancedSettings.h  GUISettings.cpp  GUIWindowSettingsCategory.cpp  Settings.cpp  Settings.h
xbmc/settings/windows/: GUIWindowSettingsCategory.cpp
xbmc/storage/: DetectDVDType.cpp  IoSupport.cpp  MediaManager.cpp  cdioSupport.cpp
xbmc/utils/: CPUInfo.cpp  CharsetConverter.cpp  LCD.cpp  LCD.h  Makefile  RssReader.cpp  SystemInfo.cpp  SystemInfo.h
xbmc/video/: VideoThumbLoader.cpp
xbmc/video/windows/: GUIWindowFullScreen.cpp  GUIWindowVideoBase.cpp  GUIWindowVideoNav.cpp
xbmc/win32/: Win32DelayedDllLoad.cpp
xbmc/windowing/osx/: WinSystemOSX.mm
(+52 files in other folders)
